<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:title="@string/myLists"
            android:orderInCategory="0"
            android:icon="@drawable/ic_featured_play_list_black_24dp" />
        <item
            android:title="@string/markets"
            android:orderInCategory="1"
            android:icon="@drawable/ic_shopping_cart_black_24dp" />
        <item
            android:title="@string/defining_product"
            android:orderInCategory="2"
            android:icon="@drawable/ic_settings_remote_black_24dp" />
    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            android:orderInCategory="5"
            android:icon="@drawable/ic_build_black_24dp" />
        <item
            android:id="@+id/log_out"
            android:title="@string/log_out"
            android:orderInCategory="6"
            android:icon="@drawable/ic_logout" />
    </group>
</menu>