<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:animateLayoutChanges="true">
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ustek_logo"
            android:layout_marginTop="150dp"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_1"
            android:visibility="visible"/>

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:visibility="gone">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="0dp"
                android:src="@drawable/logo_login"
                android:layout_gravity="center"
                android:layout_weight="0.06" />

            <ProgressBar
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_username"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:layout_marginTop="5dp"
                    android:paddingTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:layout_marginTop="5dp"
                    android:paddingTop="5dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textColor="@color/cast_expanded_controller_background_color"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/divider"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>